<resources>
    <string name="app_name">Club La Ribera</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Club La Ribera</string>
    <string name="nav_header_subtitle">desarrollos.lopezgaston@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="text_signin_message">Hola, ingresa a tu cuenta</string>
    <string name="hint_username">Email</string>
    <string name="hint_password">Clave</string>
    <string name="text_forgot_password">¿Olvidaste la clave?</string>
    <string name="button_sign_in">Ingresar</string>
    <string name="text_signin_signup">¿No tenés una cuenta? <b>Registrate</b></string>
    <string name="text_signup_message">Hola, vamos a registrarnos!</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_last_name">Apeliido</string>
    <string name="hint_phone">Teléfono</string>
    <string name="hint_dni">DNI</string>
    <string name="hint_confirm_password">Repetir clave</string>
    <string name="button_sign_up">Registrarme</string>
    <string name="text_signup_terms">Enviando los datos, estás de acuerdo con los <b>términos y condiciones</b></string>

    <string name="text_forgot_password_title">¿Te olvidaste la clave? No te preocupes</string>
    <string name="text_forgot_password_message">Recibirás un mail para que recuperes tu contraseña</string>
    <string name="button_send">Enviar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>