<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.registro.RegistroActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/pelota5" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:fillViewport="true"
            android:fitsSystemWindows="true"
            tools:context="com.example.clublaribera_app.ui.login.LoginActivity">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:scrollbarThumbHorizontal="@null"
                android:scrollbarThumbVertical="@null">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/signup_image_layout"
                        android:layout_gravity="center"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:orientation="vertical"
                        android:layout_marginBottom="8dp">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/ivFoto"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:scaleType="centerCrop"
                            android:src="@drawable/dummy_image" />

                        <ImageButton
                            android:id="@+id/btFoto"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentBottom="true"
                            android:layout_margin="1dp"
                            android:src="@drawable/ic_plus"
                            android:scaleType="centerCrop"
                            android:background="#00000000"
                            />
                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="16dp"
                        android:text="@string/text_signup_message"
                        android:textColor="#696969"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        app:cardBackgroundColor="@color/colorTextInputBackground"
                        app:cardCornerRadius="24dp"
                        app:cardElevation="0dp">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:boxBackgroundMode="outline">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_nombre"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="12dp"
                                android:layout_marginRight="12dp"
                                android:background="@android:color/transparent"
                                android:drawableStart="@drawable/ic_person"
                                android:drawableLeft="@drawable/ic_person"
                                android:drawablePadding="12dp"
                                android:hint="@string/hint_name"
                                android:imeOptions="actionNext"
                                android:minWidth="320dp"
                                android:minHeight="45dp"
                                android:singleLine="true" />

                        </com.google.android.material.textfield.TextInputLayout>


                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        app:cardBackgroundColor="@color/colorTextInputBackground"
                        app:cardCornerRadius="24dp"
                        app:cardElevation="0dp">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:boxBackgroundMode="outline">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_apellindo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="12dp"
                                android:layout_marginRight="12dp"
                                android:background="@android:color/transparent"
                                android:drawableStart="@drawable/ic_person"
                                android:drawableLeft="@drawable/ic_person"
                                android:drawablePadding="12dp"
                                android:hint="@string/hint_last_name"
                                android:imeOptions="actionNext"
                                android:minWidth="320dp"
                                android:minHeight="45dp"
                                android:singleLine="true" />

                        </com.google.android.material.textfield.TextInputLayout>


                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        app:cardBackgroundColor="@color/colorTextInputBackground"
                        app:cardCornerRadius="24dp"
                        app:cardElevation="0dp">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:boxBackgroundMode="outline">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_dni"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="12dp"
                                android:layout_marginRight="12dp"
                                android:inputType="number"
                                android:background="@android:color/transparent"
                                android:drawableStart="@drawable/ic_person"
                                android:drawableLeft="@drawable/ic_person"
                                android:drawablePadding="12dp"
                                android:hint="@string/hint_dni"
                                android:imeOptions="actionNext"
                                android:minWidth="320dp"
                                android:minHeight="45dp"
                                android:singleLine="true" />

                        </com.google.android.material.textfield.TextInputLayout>


                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        app:cardBackgroundColor="@color/colorTextInputBackground"
                        app:cardCornerRadius="24dp"
                        app:cardElevation="0dp">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:boxBackgroundMode="outline">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_email"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="12dp"
                                android:layout_marginRight="12dp"
                                android:background="@android:color/transparent"
                                android:drawableStart="@drawable/ic_mail"
                                android:drawableLeft="@drawable/ic_mail"
                                android:drawablePadding="12dp"
                                android:hint="@string/hint_email"
                                android:imeOptions="actionNext"
                                android:inputType="textEmailAddress"
                                android:minWidth="320dp"
                                android:minHeight="45dp"
                                android:singleLine="true" />

                        </com.google.android.material.textfield.TextInputLayout>


                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        app:cardBackgroundColor="@color/colorTextInputBackground"
                        app:cardCornerRadius="24dp"
                        app:cardElevation="0dp">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:boxBackgroundMode="outline">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_telefono"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="12dp"
                                android:layout_marginRight="12dp"
                                android:inputType="number"
                                android:background="@android:color/transparent"
                                android:drawableStart="@drawable/ic_phone"
                                android:drawableLeft="@drawable/ic_phone"
                                android:drawablePadding="12dp"
                                android:hint="@string/hint_phone"
                                android:imeOptions="actionNext"
                                android:minWidth="320dp"
                                android:minHeight="45dp"
                                android:singleLine="true" />

                        </com.google.android.material.textfield.TextInputLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:cardBackgroundColor="@color/colorTextInputBackground"
                        android:layout_margin="10dp"
                        app:cardCornerRadius="24dp"
                        app:cardElevation="0dp">

                        <Spinner
                            android:id="@+id/spTipoUsuario"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="12dp"
                            android:layout_marginRight="12dp"
                            android:background="@android:color/transparent"
                            android:drawablePadding="12dp"
                            android:minWidth="320dp"
                            android:minHeight="45dp"/>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvCategorias"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:cardBackgroundColor="@color/colorTextInputBackground"
                        android:layout_margin="10dp"
                        app:cardCornerRadius="24dp"
                        app:cardElevation="0dp"
                        android:visibility="invisible">

                        <Spinner
                            android:id="@+id/spCategoria"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="12dp"
                            android:layout_marginRight="12dp"
                            android:background="@android:color/transparent"
                            android:drawablePadding="12dp"
                            android:minWidth="320dp"
                            android:minHeight="45dp"/>

                    </androidx.cardview.widget.CardView>

                    <Button
                        android:id="@+id/button_signin"
                        style="@style/Button1"
                        android:layout_width="342dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:text="@string/button_sign_up" />

                    <LinearLayout
                        android:id="@+id/social_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:orientation="vertical">

                    </LinearLayout>

                    <TextView
                        android:id="@+id/button_signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/text_signup_terms"
                        android:textSize="13sp" />
                </LinearLayout>

            </RelativeLayout>


        </ScrollView>

    </RelativeLayout>

</RelativeLayout>